--- a/SurfSpot.html
+++ b/SurfSpot.html
@@ -18,7 +18,7 @@
           <div class="container">
             
             <a href="#" class="navbar-brand logo" >
-              <p class="logo">SURF<span style="color: #fffaeb;">SPOT</span></p>
+              <p class="logo">SURF<span style="color: #f6f4ec;">SPOT</span></p>
             </a>
   
             <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
